--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,44 +2,44 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:theme="@style/Theme.WellNessWarden"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:theme="@style/Theme.WellNessWarden"
     tools:context="com.simbiri.wellness_warden.MainActivity">
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/nav_host_fragment"
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_height="0dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="10dp"
+        app:layout_constraintBottom_toTopOf="@id/bottomNavView"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginBottom="40dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:navGraph="@navigation/nav_graph"
-        />
+        app:layout_constraintTop_toTopOf="parent"
+        app:navGraph="@navigation/nav_graph" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavView"
         android:layout_width="match_parent"
         android:layout_height="56dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
-        app:itemIconSize="25dp"
+        android:background="@drawable/bottom_nav_shape"
         android:elevation="8dp"
+        app:itemIconSize="25dp"
+        app:itemIconTint="@color/select_nav_icon"
         app:itemTextAppearanceActive="@style/bottomNavTextStyle"
         app:itemTextAppearanceInactive="@style/bottomNavTextStyle"
-        app:labelVisibilityMode="labeled"
-        app:itemIconTint="@color/select_nav_icon"
         app:itemTextColor="@color/select_nav_icon"
+        app:labelVisibilityMode="labeled"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:menu="@menu/bottom_menu"
-        android:background="@drawable/bottom_nav_shape"
-
-    />
-
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
