--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,12 +1,12 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.WellNessWarden" parent="Theme.MaterialComponents.Light.DarkActionBar">
+    <style name="Theme.WellNessWarden" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/orangePrimary</item>
         <item name="colorPrimaryVariant">@color/orangePrimaryVariant</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/greenSecondary</item>
+        <item name="colorSecondary">@color/black</item>
         <item name="colorSecondaryVariant">@color/greenSecVariant</item>
         <item name="colorOnSecondary">@color/white</item>
         <!-- Status bar color. -->
@@ -17,6 +17,11 @@
     <style name="bottomNavTextStyle" parent="Widget.Material3.BottomNavigationView">
         <item name="fontFamily">@font/baloo_paaji_2_semibold</item>
         <item name="android:textSize">13sp</item>
+    </style>
+
+    <style name="searchViewStyle" parent="Widget.AppCompat.SearchView">
+        <item name="fontFamily">@font/baloo_paaji_2_semibold</item>
+        <item name="android:textSize">15sp</item>
     </style>
 
 </resources>
