--- a/app/src/main/res/layout/meal_list_item.xml
+++ b/app/src/main/res/layout/meal_list_item.xml
@@ -19,7 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:scaleType="centerCrop"
-            android:src="@drawable/milk"
+            android:src="@drawable/fastfood_24"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
