--- a/app/src/main/res/layout/my_profile_fragment.xml
+++ b/app/src/main/res/layout/my_profile_fragment.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/backgroundPic"
+    android:background="@drawable/backgroundpic"
     tools:context=".MyProfileFragment">
 
     <TextView
